tests/snapshots/tests__basic__unexpected_arg.snap
---
source: tests/tests.rs
expression: "super::run(spec, args)"
---
command cat <<'EOF_96fc7ed9'
[1m[31merror:[0m unexpected argument '[33m--invalid[0m' found

[1m[4mUsage:[0m [1mmyapp[0m [OPTIONS]

For more information, try '[1m--help[0m'.
EOF_96fc7ed9
exit 1
